--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -12,13 +12,7 @@
         Lo que sea
     </p>
     
-<!--     
-    <script src="./assets/js/app.js"></script>
-    <script src="./assets/js/alerts.js"></script> -->
-    <!-- <script src="./assets/js/primitivos.js"></script> -->
-    <!-- <script src="./assets/js/palabras-reservadas.js"></script> -->
-    <!-- <script src="./assets/js/arreglos.js"></script> -->
-    <!-- <script src="./assets/js/arreglos2.js"></script> -->
-    <script src="./assets/js/objeto-literal.js"></script>
+    <script src="assets/js/ciclos/while-do-while.js"></script>
+
 </body>
 </html>
