--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -12,7 +12,8 @@
         Lo que sea
     </p>
     
-    <script src="assets/js/ciclos/while-do-while.js"></script>
+    <!-- <script src="assets/js/ciclos/while-do-while.js"></script> -->
+    <script src="assets/js/ciclos/for.js"></script>
 
 </body>
 </html>
