--- a/02-blackjack/index.html
+++ b/02-blackjack/index.html
@@ -17,9 +17,9 @@
     <div class="row mt-2">
         <div id="divBotones" class="col text-center">
 
-            <button class="btn btn-danger">Nuevo Juego</button>
-            <button class="btn btn-primary">Pedir Carta</button>
-            <button class="btn btn-primary">Detener</button>
+            <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
+            <button id="btnPedir" class="btn btn-primary">Pedir Carta</button>
+            <button id="btnDetener" class="btn btn-primary">Detener</button>
 
         </div>
     </div>
@@ -28,8 +28,8 @@
         <div class="col">
 
                 <h1>Jugador 1 - <small>0</small></h1>
-                <div id="jugador-cartas">
-                    <img class="carta" src="assets/cartas/2C.png">
+                <div id="jugador-cartas" class="divCartas">
+                    <!-- <img class="carta" src="assets/cartas/2C.png"> -->
                 </div>
 
         </div>
@@ -39,8 +39,8 @@
         <div class="col">
 
                 <h1>Computadora - <small>0</small></h1>
-                <div id="computadora-cartas">
-                    <img class="carta" src="assets/cartas/3C.png">
+                <div id="computadora-cartas" class="divCartas">
+                    <!-- <img class="carta" src="assets/cartas/3C.png"> -->
                 </div>
 
         </div>
@@ -48,5 +48,14 @@
 
     <script src="assets/js/underscore-min.js"></script>
     <script src="assets/js/juego.js"></script>
+
+    <script>
+
+        console.log( miModulo );
+
+        miModulo.nuevoJuego();
+
+    </script>
+
 </body>
 </html>
